Algotrader engine got simplyfied and stable

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -35,6 +35,8 @@
                                     description='Invites a new user to create their own account', icon='add user icon') }}
                 {{ dashboard_option('Market Data', 'admin.market_data',
                                     description='Stored Market data') }}
+                {{ dashboard_option('Client Commands', 'admin.clientcommands',
+                                    description='Station commands') }}
 
             </div>
         </div>
