--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -24,13 +24,13 @@
             <div class="page-title-actions">
                 <div>
                     <input id="report_time" type="hidden" value="{{report_time}}">
-                    <div class="mb-2 mr-2 badge badge-secondary">Last update : {{ report.reported_text }}</div>
+                    <div class="mb-2 mr-2 badge badge-secondary">Last report : {{ report.reported_text }}</div>
                     <div id="connection_state" class="mb-2 mr-2 badge badge-pill badge-danger">offline</div>
                 </div>
 
 
                 <div>
-                    <div class="mb-2 mr-2 badge badge-pill badge-secondary">Last worker : {{
+                    <div class="mb-2 mr-2 badge badge-pill badge-secondary">Last processing : {{
                         report.last_worker_execution_text }}
                     </div>
                 </div>
