--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -229,6 +229,7 @@
                             <th class="text-center">Ask Price</th>
                             <th class="text-center">Target Price</th>
                             <th class="text-center">Rank</th>
+                            <th class="text-center">FMP Rank</th>
 
                         </tr>
                         </thead>
@@ -251,6 +252,7 @@
                         <td class="text-center">{{value['Ask']}}</td>
                         <td class="text-center">{{value['target_price']|round(2)}}</td>
                         <td class="text-center">{{value['tipranksRank']}}</td>
+                        <td class="text-center">{{value['fmp_rating']}}</td>
 
                         </tr>
                         {% endfor %}
