station ui adjusted

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -31,7 +31,7 @@
 
 
                 <div>
-                    <div class="mb-2 mr-2 badge badge-pill badge-secondary">Last processing : {{
+                    <div id="last_execution_time" class="mb-2 mr-2 badge badge-pill badge-secondary">Last processing : {{
                         report.last_worker_execution_text }}
                     </div>
                 </div>
